review/week6-security-rbac-network-policies-secrets-serviceaccounts/pod-securityContext-serviceaccount-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secondapp
  labels:
    example: second
spec:
  serviceAccountName: secret-access-sa
  containers:
    - name: webserver
      image: nginx
    - name: busy
      image: busybox
      command:
        - sleep
        - "3600"
      securityContext:
        # runAsNonRoot: true
        runAsUser: 2000  # run the container process as user ID `2000` instead of root
        allowPrivilegeEscalation: false
        capabilities:
          add: ["NET_ADMIN", "SYS_TIME"]
      volumeMounts:
      - name: mysql
        mountPath: /mysqlpassword
  volumes:
    - name: mysql
      secret:
        secretName: lfsecret
